--- a/session01/Session 01 - Course Introduction.desktop
+++ b/session01/Session 01 - Course Introduction.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Version=1.0
 Type=Link
-Name=Session 01 - Course Introduction
-Comment=Session 01 - Course Introduction
+Name=Session 01 - Workshop Introduction
+Comment=Session 01 - Workshop Introduction
 Icon=firefox
-URL=https://goo.gl/HJm3V1
-GenericName=Session 01 - Course Introduction
+URL=https://brookhavenlab-my.sharepoint.com/:p:/g/personal/dbiersach_bnl_gov/EZ8lg7leswlJrRrqxUMa7vkBHtMPxAh6uteoahTXTuL8Gg?e=uwiKQH
+GenericName=Session 01 - Workshop Introduction
