Update Session 02 - Cloud PC, Linux Xfce, CodeBlocks.desktop
Use O365 link

--- a/session02/Session 02 - Cloud PC, Linux Xfce, CodeBlocks.desktop
+++ b/session02/Session 02 - Cloud PC, Linux Xfce, CodeBlocks.desktop
@@ -4,5 +4,5 @@ Type=Link
 Name=Session 02 - Cloud PC, Linux Xfce, CodeBlocks
 Comment=Session 02 - Cloud PC, Linux Xfce, CodeBlocks
 Icon=firefox
-URL=https://goo.gl/ZhKwk3
+URL=https://brookhavenlab-my.sharepoint.com/:p:/g/personal/dbiersach_bnl_gov/EaeMHfx2jh5Ll90ocT53R30Bnrkac6h49JmkjUnBjZIJjg?e=yYPe2F
 GenericName=Session 02 - Cloud PC, Linux Xfce, CodeBlocks
