--- a/session03/Session 03 - Code Structure, Variables.desktop
+++ b/session03/Session 03 - Code Structure, Variables.desktop
@@ -4,5 +4,5 @@ Type=Link
 Name=Session 03 - Code Structure, Variables
 Comment=Session 03 - Code Structure, Variables
 Icon=firefox
-URL=https://goo.gl/fCY33S
+URL=https://brookhavenlab-my.sharepoint.com/:p:/g/personal/dbiersach_bnl_gov/EdhNkKrdsfhLrshTYVPYhBQBTatHHRwn63SZTYGTyDzCow?e=VGPdaa
 GenericName=Session 03 - Code Structure, Variables
