--- a/session04/Session 04 - Boolean Algebra, Logic Gates.desktop
+++ b/session04/Session 04 - Boolean Algebra, Logic Gates.desktop
@@ -4,5 +4,5 @@ Type=Link
 Name=Session 04 - Boolean Algebra, Logic Gates
 Comment=Session 04 - Boolean Algebra, Logic Gates
 Icon=firefox
-URL=https://goo.gl/QN9p6N
+URL=https://brookhavenlab-my.sharepoint.com/:p:/g/personal/dbiersach_bnl_gov/ERYllKkz5dVDiJSbIaCKYw0BUxtMAqN6TSNeS8Dw37zSnA?e=DIHkmu
 GenericName=Session 04 - Boolean Algebra, Logic Gates
