--- a/session05/Session 05 - Functional Equations, Equilibrium Simulation.desktop
+++ b/session05/Session 05 - Functional Equations, Equilibrium Simulation.desktop
@@ -4,5 +4,5 @@ Type=Link
 Name=Session 05 - Functional Equations, Equilibrium Simulation
 Comment=Session 05 - Functional Equations, Equilibrium Simulation
 Icon=firefox
-URL=https://goo.gl/L1JasN
+URL=https://brookhavenlab-my.sharepoint.com/:p:/g/personal/dbiersach_bnl_gov/EebB7OnWX8dOoBHcVSwXaJgBgmz1NBI3mX1VPLiJuc6GxA?e=WuDpLS
 GenericName=Session 05 - Functional Equations, Equilibrium Simulation
