--- a/session06/Session 06 - Operators, Conditionals, Number Theory.desktop
+++ b/session06/Session 06 - Operators, Conditionals, Number Theory.desktop
@@ -4,5 +4,5 @@ Type=Link
 Name=Session 06 - Operators, Conditionals, Number Theory
 Comment=Session 06 - Operators, Conditionals, Number Theory
 Icon=firefox
-URL=https://goo.gl/q93S0Y
+URL=https://brookhavenlab-my.sharepoint.com/:p:/g/personal/dbiersach_bnl_gov/EehI4vuXCa1Iq40TPIh5tx0Bi1nO3BGpudTT0QQfYoqyGQ?e=CWLWh3
 GenericName=Session 06 - Operators, Conditionals, Number Theory
