--- a/session07/Session 07 - Random Numbers, Statistics.desktop
+++ b/session07/Session 07 - Random Numbers, Statistics.desktop
@@ -4,6 +4,6 @@ Type=Link
 Name=Session 07 - Random Numbers, Statistics
 Comment=Session 07 - Random Numbers, Statistics
 Icon=firefox
-URL=https://goo.gl/okj16T
+URL=https://brookhavenlab-my.sharepoint.com/:p:/g/personal/dbiersach_bnl_gov/ER5BJ1ZlQQJEm9-V7U8WLN0Bw4FmCyEGEC7tn-d_htan4Q?e=I2skwG
 GenericName=Session 07 - Random Numbers, Statistics
 
