--- a/session08/Session 08 - Curve Fitting with Difference Tables.desktop
+++ b/session08/Session 08 - Curve Fitting with Difference Tables.desktop
@@ -4,5 +4,5 @@ Type=Link
 Name=Session 08 - Curve Fitting with Difference Tables
 Comment=Session 08 - Curve Fitting with Difference Tables
 Icon=firefox
-URL=https://goo.gl/q462ie
+URL=https://brookhavenlab-my.sharepoint.com/:p:/g/personal/dbiersach_bnl_gov/EQBnWDp3h-NCo08SH8ojxJ8BLJwPy1dCaB-qUU2ISrX8jQ?e=lQIAVa
 GenericName=Session 08 - Curve Fitting with Difference Tables
