--- a/session09/Session 09 - Algorithms, Series Convergence.desktop
+++ b/session09/Session 09 - Algorithms, Series Convergence.desktop
@@ -4,5 +4,5 @@ Type=Link
 Name=Session 09 - Algorithms, Series Convergence
 Comment=Session 09 - Algorithms, Series Convergence
 Icon=firefox
-URL=https://goo.gl/Znc0ta
+URL=https://brookhavenlab-my.sharepoint.com/:p:/g/personal/dbiersach_bnl_gov/EVoqWWoPU75Ip8pd2V_ltQ4BsYCUMJ00cLHOTzylgjMYiw?e=I9sbeT
 GenericName=Session 09 - Algorithms, Series Convergence
