--- a/session10/Session 10 - Vectors, Instrumentation.desktop
+++ b/session10/Session 10 - Vectors, Instrumentation.desktop
@@ -4,6 +4,6 @@ Type=Link
 Name=Session 10 - Vectors, Instrumentation
 Comment=Session 10 - Vectors, Instrumentation
 Icon=firefox
-URL=https://goo.gl/uild6k
+URL=https://brookhavenlab-my.sharepoint.com/:p:/g/personal/dbiersach_bnl_gov/EalAWe5ahZZPu7_vqGNa158BMMluKIbRAeEc7uf1TsSLxQ?e=jFoMTt
 GenericName=Session 10 - Vectors, Instrumentation
 
