--- a/session11/Session 11 - Strings, ROOT, Cryptography.desktop
+++ b/session11/Session 11 - Strings, ROOT, Cryptography.desktop
@@ -4,5 +4,5 @@ Type=Link
 Name=Session 11 - Strings, ROOT, Cryptography
 Comment=Session 11 - Strings, ROOT, Cryptography
 Icon=firefox
-URL=https://goo.gl/zZmPX3
+URL=https://brookhavenlab-my.sharepoint.com/:p:/g/personal/dbiersach_bnl_gov/EWNYBc8voSVImG_srjkp2tgBZD0wVfgGwhtkf-kGO-6fjA?e=0dGc9h
 GenericName=Session 11 - Strings, ROOT, Cryptography
