--- a/session12/Session 12 - Combinatorics, Recursion.desktop
+++ b/session12/Session 12 - Combinatorics, Recursion.desktop
@@ -4,5 +4,5 @@ Type=Link
 Name=Session 12 - Combinatorics, Recursion
 Comment=Session 12 - Combinatorics, Recursion
 Icon=firefox
-URL=https://goo.gl/sTgz1o
+URL=https://brookhavenlab-my.sharepoint.com/:p:/g/personal/dbiersach_bnl_gov/EdfJxTtuAT1PkeVZYS7DoCYBATkvIkAK6Ljh6fujVIwiMw?e=CzouXV
 GenericName=Session 12 - Combinatorics, Recursion
