--- a/session13/Session 13 - 2D Graphics, Polar Coordinates.desktop
+++ b/session13/Session 13 - 2D Graphics, Polar Coordinates.desktop
@@ -4,5 +4,5 @@ Type=Link
 Name=Session 13 - 2D Graphics, Polar Coordinates
 Comment=Session 13 - 2D Graphics, Polar Coordinates
 Icon=firefox
-URL=https://goo.gl/BYV7Vd
+URL=https://brookhavenlab-my.sharepoint.com/:p:/g/personal/dbiersach_bnl_gov/EfT_nHlmqfRJlG1uIXvZPbIBFbj-oxTaqTp71GmGxLSpLw?e=3JzMAm
 GenericName=Session 13 - 2D Graphics, Polar Coordinates
