--- a/session14/Session 14 - Matrices, Search Algorithms.desktop
+++ b/session14/Session 14 - Matrices, Search Algorithms.desktop
@@ -4,5 +4,5 @@ Type=Link
 Name=Session 14 - Matrices, Search Algorithms
 Comment=Session 14 - Search Algorithms
 Icon=firefox
-URL=https://goo.gl/eToATp
+URL=https://brookhavenlab-my.sharepoint.com/:p:/g/personal/dbiersach_bnl_gov/EZCwsSNAa8FGpyMdDMp_sfEB5A51MfiDIs0MkuY2dgZfqQ?e=iGDYu5
 GenericName=Session 14 - Matrices, Search Algorithms
