--- a/session15/Session 15 - 3D Graphics, Vector Algebra.desktop
+++ b/session15/Session 15 - 3D Graphics, Vector Algebra.desktop
@@ -4,5 +4,5 @@ Type=Link
 Name=Session 15 - 3D Graphics, Vector Algebra
 Comment=Session 15 - 3D Graphics, Vector Algebra
 Icon=firefox
-URL=https://goo.gl/TlXrHw
+URL=https://brookhavenlab-my.sharepoint.com/:p:/g/personal/dbiersach_bnl_gov/EWT7kMhCht9Cu55raMeQTyYBuQ1sI6afuCPaAieAd_H8qQ?e=jMgtc7
 GenericName=Session 15 - 3D Graphics, Vector Algebra
