--- a/session16/Session 16 - Computational Science.desktop
+++ b/session16/Session 16 - Computational Science.desktop
@@ -4,6 +4,6 @@ Type=Link
 Name=Session 16 - Computational Science
 Comment=Session 16 - Computational Science
 Icon=firefox
-URL=https://goo.gl/dZ389x
+URL=https://brookhavenlab-my.sharepoint.com/:p:/g/personal/dbiersach_bnl_gov/EYkk_TGrdONJlbYNMgIrrjYB54aGWtULj-6XBpMZKSojdg?e=93oVKu
 GenericName=Session 16 - Computational Science
 
