--- a/session17/Session 17 - Continued Fractions.desktop
+++ b/session17/Session 17 - Continued Fractions.desktop
@@ -4,6 +4,6 @@ Type=Link
 Name=Session 17 - Continued Fractions
 Comment=Session 17 - Continued Fractions
 Icon=firefox
-URL=https://goo.gl/DhixW9
+URL=https://brookhavenlab-my.sharepoint.com/:p:/g/personal/dbiersach_bnl_gov/Ed2-5lXFxaBJr4eS72E7l-MBuv4rIZ35hBSuQOJ8tV5_ZA?e=eA5dbL
 GenericName=Session 17 - Continued Fractions
 
