--- a/session18/Session 18 - Matrices, Iterated Transforms.desktop
+++ b/session18/Session 18 - Matrices, Iterated Transforms.desktop
@@ -4,6 +4,6 @@ Type=Link
 Name=Session 18 - Matrices, Iterated Transforms
 Comment=Session 18 - Matrices, Iterated Transforms
 Icon=firefox
-URL=https://goo.gl/8HOoG7
+URL=https://brookhavenlab-my.sharepoint.com/:p:/g/personal/dbiersach_bnl_gov/Eaw4bT_7EyhEjhlIZ0bDJVcBvqeJSxf17D3tNQCFmnfdHQ?e=tgTNKn
 GenericName=Session 18 - Matrices, Iterated Transforms
 
