--- a/session19/Session 19 - Monte Carlo Integration.desktop
+++ b/session19/Session 19 - Monte Carlo Integration.desktop
@@ -4,5 +4,5 @@ Type=Link
 Name=Session 19 - Monte Carlo Integration
 Comment=Session 19 - Monte Carlo Integration
 Icon=firefox
-URL=https://goo.gl/ZfVXDc
+URL=https://brookhavenlab-my.sharepoint.com/:p:/g/personal/dbiersach_bnl_gov/EZ2NzV9WdghFg-G7q8LIrfQB6-uaj1tYqfeiu3I4YmIIBw?e=zPftWd
 GenericName=Session 19 - Monte Carlo Integration
