--- a/session21/Session 21 - Computational Physics.desktop
+++ b/session21/Session 21 - Computational Physics.desktop
@@ -4,5 +4,5 @@ Type=Link
 Name=Session 21 - Computational Physics
 Comment=Session 21 - Computational Physics
 Icon=firefox
-URL=https://goo.gl/dQVNGJ
+URL=https://brookhavenlab-my.sharepoint.com/:p:/g/personal/dbiersach_bnl_gov/ETxpkDBL_xlNgvvcLjONp5QBv9kqXg7eTXZBUf7ueyxWDA?e=mn9frw
 GenericName=Session 21 - Computational Physics
