--- a/session22/Session 22 - Early Quantum Mechanics.desktop
+++ b/session22/Session 22 - Early Quantum Mechanics.desktop
@@ -4,5 +4,5 @@ Type=Link
 Name=Session 22 - Early Quantum Mechanics
 Comment=Session 22 - Early Quantum Mechanics
 Icon=firefox
-URL=https://goo.gl/dQVNGJ
+URL=https://brookhavenlab-my.sharepoint.com/:p:/g/personal/dbiersach_bnl_gov/ERkqy3H2NJJOucKXcfVUUL8BZk9SyoAIpIFWfoIfhojQDw?e=oqRwOu
 GenericName=Session 22 - Early Quantum Mechanics
