--- a/session23/Session 23 - Ternary Encoding, Measuring Randomness.desktop
+++ b/session23/Session 23 - Ternary Encoding, Measuring Randomness.desktop
@@ -4,5 +4,5 @@ Type=Link
 Name=Session 23 - Ternary Encoding, Measuring Randomness
 Comment=Session 23 - Ternary Encoding, Measuring Randomness
 Icon=firefox
-URL=https://goo.gl/CbCyEd
+URL=https://brookhavenlab-my.sharepoint.com/:p:/g/personal/dbiersach_bnl_gov/ESDt1XnGiLRCoQkW7fCFBMcBH9bLyI6aGbAYiglR6K-myw?e=zQvm02
 GenericName=Session 23 - Ternary Encoding, Measuring Randomness
